--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 * {
   margin: Opx;
   padding: Opx;
   box-sizing: border-box;
 }
 body {
-  background: #f5f5f5;
-  font-family: "Roboto", sans-serif;
+  background: #dafe4c;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: 'Montserrat', sans-serif;
 }
 .screen {
   display: none;
@@ -20,7 +23,7 @@ body {
   transform: translateX(-50%);
   width: 100%;
   height: 100%;
-  max-width: 500px;
+  max-width: 700px;
   background: #fff;
   border: 1px solid #ddd;
 }
